Fix some layout problems

--- a/src/main/webapp/components/Fieldset.less
+++ b/src/main/webapp/components/Fieldset.less
@@ -6,12 +6,6 @@ fieldset
 	border-radius: 5px;
 	background-color: @main_shaded2;
 
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	align-items: flex-start;
-	justify-content: space-between;
-
 	> legend
 	{
 		padding: 3px;
@@ -30,6 +24,7 @@ fieldset
 
 	fieldset
 	{
+		float: left;
 		width: 100%;
 		padding: 4px;
 		border: 4px solid @main_shaded2;
@@ -63,6 +58,7 @@ fieldset
 
 	> label
 	{
+		float: left;
 		padding: 4px;
 		display: flex;
 		text-align: left;
