--- a/src/main/webapp/components/Message.less
+++ b/src/main/webapp/components/Message.less
@@ -25,6 +25,7 @@ div.Message { width:800px;
 				    display: flex;
 				    color: inherit;
 				    font-size: 20px;
+				    text-indent: 40px;
 				    align-items: center;
 				    background-color: transparent; }
 }
